# garagem2.0

./: Procfile  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_carro_categoria_cor.py  0003_alter_cor_options.py  0004_carro_categoria_carro_cor_carro_marca.py  0005_carro_ano.py  0006_remove_carro_marca.py
garagem/: settings.py  urls.py
